feat: 实现在线判题核心功能，新增代码沙箱运行与完整判题逻辑
此提交完成了在线OJ系统的核心功能开发：
1. 新增测试用例管理接口，支持通过题目ID获取测试用例
2. 实现Java代码沙箱执行环境，支持编译、运行、超时/内存限制
3. 重构判题逻辑，支持多测试用例批量校验与结果统计
4. 前端新增多语言空代码模板，替换原有静态模板逻辑
5. 前后端联调运行/提交代码接口，替换原有模拟判题逻辑
6. 新增提交轮询判题结果功能，实时展示判题进度